[gd_scene load_steps=3 format=3 uid="uid://bb813w3v653af"]

[ext_resource type="Script" path="res://Project_Lagrange/command_system2/Command_system2.gd" id="1_58ex2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2byew"]
size = Vector2(84, 96)

[node name="Command_system2" type="Control" groups=["button"]]
custom_minimum_size = Vector2(1000, 300)
layout_mode = 3
anchors_preset = 0
offset_right = 1000.0
offset_bottom = 300.0
mouse_filter = 1
script = ExtResource("1_58ex2")

[node name="OptionButton" type="OptionButton" parent="."]
layout_mode = 0
offset_right = 45.0
offset_bottom = 20.0

[node name="assign_func" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 80.0
offset_top = 40.0
offset_right = 180.0
offset_bottom = 80.0
alignment = 1

[node name="second_input" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 230.0
offset_top = 40.0
offset_right = 330.0
offset_bottom = 80.0

[node name="plus" type="Label" parent="."]
layout_mode = 0
offset_left = 185.0
offset_top = 40.0
offset_right = 225.0
offset_bottom = 85.0
theme_override_font_sizes/font_size = 28
text = "+"
horizontal_alignment = 1

[node name="Confirm" type="Button" parent="."]
layout_mode = 0
offset_left = 130.0
offset_right = 199.0
offset_bottom = 31.0
text = "confirm"

[node name="Container" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 400.0
offset_right = 1080.0
offset_bottom = 400.0

[node name="add_line" type="Button" parent="."]
layout_mode = 0
offset_left = 250.0
offset_right = 290.0
offset_bottom = 35.0
theme_override_font_sizes/font_size = 16
text = "+"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 40.0
offset_top = 45.0
offset_right = 80.0
offset_bottom = 68.0
theme_override_font_sizes/font_size = 16
text = "loop"
horizontal_alignment = 1

[node name="if_button" type="CheckBox" parent="."]
layout_mode = 0
offset_top = 80.0
offset_right = 45.0
offset_bottom = 105.0
text = "if"

[node name="if_label" type="Label" parent="if_button"]
visible = false
layout_mode = 0
offset_top = -40.0
offset_right = 40.0
offset_bottom = 5.0
theme_override_font_sizes/font_size = 32
text = "if"
horizontal_alignment = 1

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(-4, 2)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-40, 46)
shape = SubResource("RectangleShape2D_2byew")

[connection signal="item_selected" from="OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="pressed" from="Confirm" to="." method="_on_confirm_pressed"]
[connection signal="pressed" from="add_line" to="." method="_on_add_line_pressed"]
[connection signal="toggled" from="if_button" to="." method="_on_if_button_toggled"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
